# epgs-to-discord

./: .gitignore  Cargo.toml  LICENSE  README.md  config.sample.toml  test.sh
.github/workflows/: build.yml  test.yml
src/: client.rs  main.rs  settings.rs  utils.rs
src/messages/: encode.rs  error.rs  mod.rs  record.rs  reserve.rs  send.rs
src/settings/: load.rs
