[package]
name = "epgs-to-discord"
version = "1.0.0"
edition = "2021"
authors = ["yude"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webhook = "2.1.2"
tokio = { version = "1.27.0", features = ["full"] }
config = "0.13.1"
serde_derive = "1.0.160"
serde = "1.0.160"
clap = { version = "4.2.3", features = ["derive"] }
chrono = "0.4.24"
openssl = { version = "0.10.50", features = ["vendored"] }