[package]
name = "epgs-to-discord"
version = "1.0.4"
edition = "2021"
authors = ["yude"]
description = "Post EPGStation's notifications to Discord via Webhook"
license = "MIT"
repository = "https://github.com/yude/epgs-to-discord"
readme = "README.md"

[dependencies]
webhook = "2.1.2"
tokio = { version = "1.27.0", features = ["full"] }
config = "0.13.1"
serde_derive = "1.0.160"
serde = "1.0.160"
clap = { version = "4.2.3", features = ["derive"] }
chrono = "0.4.24"
chrono-tz = "0.8.4"
home = "0.5.4"
